Update description/setup in README, fix character count after tweet submit, add word break in tweets

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -45,6 +45,7 @@ hr {
 p {
   margin-left: 1em;
   margin-right: 1em;
+  word-wrap: break-word;
 }
 
 .tweet-footer {
